# O-Walkie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md
.cursor/rules/: context.mdc  debug-build-workflow.mdc  project_memory.mdc
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-on-tag.yml
android/: README-ndk.md  build.gradle.kts  gradle.properties  owalkie-version.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  owalkie_16kb.cmake  owalkie_jni.cpp  owalkie_ndk_deps.cmake  owalkie_opus_jni.cpp
android/scripts/: build-ndk-deps.ps1
backend/: README.md  config.json  go.mod  go.sum  log.txt
backend/cmd/relay/: audio_context.go  audio_helpers.go  audio_packet.go  audio_processor.go  audio_timing.go  client.go  config_load.go  config_types.go  config_validate.go  dsp_clicks_pops.go  dsp_compressor.go  dsp_dispersion.go  dsp_distortion.go  dsp_filter.go  dsp_noise_squelch.go  gen_squelch_shots.go  hub.go  jitter.go  main.go  mixer.go  mixer_repeater.go  mixer_ws_broadcast.go  module_pipeline.go  opus_runtime.go  protocol_ws.go  relay_const.go  udp_reader.go  ws_server.go
flutter-client/: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  analysis_options.yaml  pubspec.yaml
flutter-client/android/: gradle.properties
flutter-client/android/app/: build.gradle.kts
flutter-client/ios/: DEVELOPER_HANDOFF.md  README.md
flutter-client/ios/Runner/: AppDelegate.swift  Info.plist  MicrophoneSourceRegistry.swift
flutter-client/ios/Runner.xcodeproj/: project.pbxproj
flutter-client/ios/scripts/: build-ios-deps.sh
flutter-client/lib/: main.dart
flutter-client/lib/a11y/: a11y.dart  a11y_desktop_numeric_field.dart  a11y_slider_field.dart  a11y_spin_box_field.dart  a11y_wheel_picker_field.dart  ptt_a11y.dart  settings_section.dart
flutter-client/lib/app/: app_router.dart  owalkie_app.dart
flutter-client/lib/data/: audio_device_store.dart  audio_settings_store.dart  microphone_source_store.dart  orientation_store.dart  server_store.dart  shared_preferences_provider.dart  signal_pattern_store.dart  vibration_imitation_store.dart  windows_settings_store.dart
flutter-client/lib/domain/: connection_link.dart  microphone_source_option.dart  profile_save.dart  ptt_burst_guard.dart  scan_endpoint.dart  scan_mode.dart  server_profile.dart  signal_pattern.dart  signal_point_codec.dart  windows_ptt_binding.dart
flutter-client/lib/features/home/: home_screen.dart  home_screen_controller.dart  home_screen_state.dart  ptt_gesture_button.dart  ptt_touch_policy.dart  session_event_mapper.dart
flutter-client/lib/features/settings/: settings_screen.dart  vibration_imitation_settings_screen.dart
flutter-client/lib/features/signals/: pattern_editor_screen.dart
flutter-client/lib/l10n/: a11y_strings.dart  app_en.arb  app_ru.arb  app_strings.dart
flutter-client/lib/platform/: android_platform.dart  audio_device_service.dart  audio_interruption_manager.dart  haptics.dart  microphone_source_service.dart  native_platform.dart  screen_wake.dart  signal_preview_player.dart  ui_signal_player.dart  vibration_imitation.dart  vibration_imitation_player.dart  vibration_patterns.dart
flutter-client/lib/platform/windows/: desktop_bootstrap.dart  desktop_shell.dart  (+1 more)
flutter-client/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter-client/test/: audio_device_store_test.dart  connection_link_test.dart  home_screen_a11y_test.dart  home_screen_profile_selection_test.dart  link_signal_test.dart  microphone_source_store_test.dart  profile_save_test.dart  ptt_a11y_test.dart  ptt_burst_guard_test.dart  ptt_gesture_button_test.dart  ptt_touch_policy_test.dart  scan_endpoint_test.dart  server_store_test.dart  session_event_mapper_test.dart  signal_pattern_pcm_test.dart  signal_pattern_store_test.dart  test_app_scope.dart  ui_sound_library_test.dart  vibration_imitation_store_test.dart  vibration_imitation_test.dart  widget_test.dart  windows_audio_devices_test.dart  windows_settings_store_test.dart
flutter-client/tool/: build_all.ps1  build_ios.sh  build_windows.ps1  setup_plugin_junctions.ps1  stage_runtime.ps1  version_from_git.ps1  version_from_git.sh  vs_cpp_tools.vsconfig
flutter-client/windows/: CMakeLists.txt
flutter-client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter-client/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  global_ptt_hook.cpp  global_ptt_hook.h  global_ptt_plugin.cpp  global_ptt_plugin.h  main.cpp
owalkie-core/: CMakeLists.txt  README.md
owalkie-core/include/: owalkie_core.h
owalkie-core/include/owalkie/: activity_probe.hpp  client_events.hpp  json.hpp  link_signal.hpp  protocol.hpp  session.hpp  session_manager.hpp  signal.hpp  types.hpp  udp.hpp
owalkie-core/src/: activity_probe.cpp  c_api.cpp  json.cpp  link_signal.cpp  opus_codec.cpp  opus_codec.hpp  protocol.cpp  session.cpp  session_manager.cpp  signal.cpp  udp.cpp  version.cpp
owalkie-core/tests/: test_client_events.cpp  test_json.cpp  test_json_wire.cpp  test_link_signal.cpp  test_main.cpp  test_protocol.cpp  test_session_info.cpp  test_signal.cpp  test_tx_signal.cpp  test_udp.cpp
release/v0.1.3/owalkie-relay-windows-amd64/: config.json
windows-client/: OWalkie.Windows.sln  README.md
windows-client-cpp/: CMakeLists.txt  README.md
windows-client-cpp/locale/ru/LC_MESSAGES/: owalkie.mo
windows-client-cpp/po/: ru.po
windows-client-cpp/scripts/: build-installer.ps1  bundle-ucrt64-deps.sh  copy-android-sounds.cmake  copy-desktop-locale.cmake  owalkie-installer.iss
windows-client-cpp/src/: AudioEngine.cpp  AudioEngine.h  LocaleInit.cpp  LocaleInit.h  MainFrame.cpp  MainFrame.h  RelayClient.cpp  RelayClient.h  main.cpp
windows-client/src/OWalkie.Desktop.Wpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OWalkie.Desktop.Wpf.csproj  SettingsWindow.xaml  SettingsWindow.xaml.cs
(+72 files in other folders)
